--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,5 +1,5 @@
   
-/* Remove the default margin and padding from the body. */
+Remove the default margin and padding from the body.
 body {
     padding: 0;
     margin: 0;
@@ -29,14 +29,13 @@ body {
 
   #myChart {
     /* width: 200px; */
-    height: 30px;
+    /* height: 30px; */
   }
 
   .header {
     text-align: center;
     vertical-align: middle;
     font-family: Arial, Helvetica, sans-serif;
-    padding: 10px;
     background-color: darkslategrey;
     color: white;
     /* width: fit-content; */
@@ -50,9 +49,31 @@ body {
 
 h1, h2, h3, h4, h5 {
   font-family: Arial, Helvetica, sans-serif;
+  padding-top: 10px;
 }
 
-.col-md {
+.col-sm-4, .col-sm-8 {
   padding: 10px;
-  margin: 5px
+  margin: 5px;
+}
+.col-sm-12 {
+  padding-top: 10px;
+  padding-left: 0px;
+  padding-right: 0px;
+}
+
+.row , .container{
+  padding: 0px;
+  margin: 0px;
+}
+
+hr {
+  height:1px;
+  border:none;
+  color:darkslategrey;
+  background-color:darkslategrey;"
+}
+
+canvas {
+  padding: 10px;
 }
